--- a/modules/eth-token/substreams.yaml
+++ b/modules/eth-token/substreams.yaml
@@ -10,6 +10,7 @@ package:
     for tokens.
 
 imports:
+  sink_files: https://github.com/streamingfast/substreams-sink-files/releases/download/v0.2.0/substreams-sink-files-v0.2.0.spkg
   eth: https://github.com/streamingfast/sf-ethereum/releases/download/v0.10.2/ethereum-v0.10.4.spkg
 
 protobuf:
@@ -38,3 +39,11 @@ modules:
     valueType: proto:sf.ethereum.tokens.v1.Token
     inputs:
       - map: map_tokens
+
+  - name: jsonout
+    kind: map
+    initialBlock: 16759234
+    inputs:
+      - map: map_tokens
+    output:
+      type: proto:sf.substreams.sink.files.v1.Lines
